Dirutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.?.? (????-??-??) [?]
  
  nothing yet.

* Noteworthy changes in release 0.3.0 (2023-03-23) [unstable]

** Bug fixes

  fixed `dirstats -v` not working.

** Improvements

  `dirwatch` now supports colorized and pretty-formatteds output.