@@ -2,7 +2,10 @@ Dirutils NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release ?.?.? (????-??-??) [?]
   
-  nothing yet.
+** New features
+
+  now it is possible to set an inotify watcher recursively in `dirwatch`. 
+  it also supports the verbose (`-V` or `--verbose`) option now.
 
 * Noteworthy changes in release 0.3.0 (2023-03-23) [unstable]
 
